# Multimodal_RAG

./: .coverage  .dockerignore  .gitignore  API_GUIDE.md  Dockerfile  GEMINI.md  README.md  SYSTEM_DESIGN.md  To_do_list.md  all_models.json  benchmark.py  check_models.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  task.md  test_api.py  walkthrough.md  개발설계문서.md  개선점.md
docs/: API_GUIDE.md  SYSTEM_DESIGN.md  TEST_CHECKLIST.md  walkthrough.md
docs/design/: MASTER_PROJECT_VISION.md
frontend/: DESIGN_SYSTEM.md  FRONTEND_DESIGN.md  README.md  pubspec.yaml  디자인 시스템.md
frontend/lib/: main.dart
frontend/test/: widget_test.dart
scripts/: README.md  docker_build.sh  docker_run.sh  server_start.sh
scripts/utils/: check_dims.py  check_gcs.py  check_models.py  hard_reset.py  list_all_models.py  parse_models.py  test_curl.sh
src/: config.py
src/api/: auth.py  logs.py  main.py  routes.py  schemas.py  security.py  services.py
src/parsing/: client.py  parser.py  schema.py
src/preprocessing/: loader.py  thumbnail.py
src/rag_pipeline/: generator.py  ingestion_service.py  loader.py  parser.py  query_expansion.py  retriever.py  schema.py  thumbnail.py  vector_db.py
src/retrieval/: generator.py  query_expansion.py  retriever.py
src/services/: storage.py
src/storage/: vector_db.py
tests/: create_dummy_pdf.py
tests/api/: test_api_integration.py  test_feedback.py  test_filtering.py  test_title_extraction.py
tests/evaluation/: eval_report.csv  golden_dataset.json  run_eval.py
tests/manual_qa/: run_api_tests.py  run_api_tests_16_50.py  run_tests_batch.py  test_questions_50.md  test_results_1_5.md  (+2 more)
(+73 files in other folders)
