[tool.poetry]
name = "multimodal-rag"
version = "0.0.1"
description = "A multimodal RAG project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "api", from = "src"},
    {include = "rag_pipeline", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14" # konlpy 및 주요 라이브러리의 3.13 지원 확인됨
pymupdf = "*"
google-generativeai = "*"
chromadb = "*"
python-dotenv = "*"
langchain-core = "*"
langchain-google-genai = "*"
langchain-community = "*"
langchain = "*"
langchain-chroma = "*"
langchain-text-splitters = "*"
pydantic = "*"
tiktoken = "*"
rank_bm25 = "*"
tqdm = "*"
typer = "*"
pydantic-settings = "^2.12.0"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
python-multipart = "^0.0.20"
websocket-client = "^1.9.0"
sentence-transformers = "^5.2.0"
langchain-huggingface = "^1.2.0"
ragas = "^0.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
konlpy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
